compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/ExpectClass.kt
// p.B

package p

expect class B